--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.5.1",
     "pinia": "^2.2.2",
     "tailwind": "^4.0.0",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3",
     "yup": "^1.4.0",
