feat(vue application frontend): :sparkles: add register user in app-vue application

--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@kyvg/vue3-notification": "^3.3.0",
+    "@vueuse/core": "^11.0.3",
     "axios": "^1.7.6",
     "flowbite": "^2.5.1",
     "pinia": "^2.2.2",
